--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Fotos</string>
+    <string name="defaultText">Nothing to search\nShowing results for Dunzo</string>
 </resources>
